[project]
name = "cm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=4,<5",
    "faiss-cpu>=1.7,<1.11",
    "librosa>=0.10,<1",
    "mediapipe==0.10.21",
    "numpy>=1.24,<2",
    "openai>=1.0,<2",
    "opencv-python>=4.8,<4.12",
    "pandas>=2.2,<3",
    "pillow>=10,<12",
    "sentence-transformers>=3,<5",
    "soundfile>=0.12,<1",
    "streamlit>=1.32,<2",
    "timm>=0.9,<1.1",
    "torch>=2.2,<2.7",
    "torchvision>=0.17,<0.22",
    "transformers>=4.40,<5",
]
